--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
-    "next": "16.0.7",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
