--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
+    "emoji-picker-react": "^4.16.1",
+    "jose": "^6.1.3",
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
