--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.12",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "axios": "^1.13.2",
     "emoji-picker-react": "^4.16.1",
     "jose": "^6.1.3",
